Fix bench statements